# codex-switch

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml
docs/: active-connections-guide.md  app-guide.md  balance-alert-guide.md  build-release-guide.md  cache-keepalive-guide.md  debug-guide.md  initial-plan.md  logs-guide.md  oauth-guide.md  proxy-guide.md  scheduler-guide.md  storage-guide.md  upstream-guide.md
docs/release-notes/: 0.2.1.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md
scripts/: package-macos.sh
src/: cache_keepalive.rs  live.rs  main.rs  notification.rs
src/app/: build_info.rs  fonts.rs  http.rs  icon.rs  mod.rs  platform.rs  state.rs  tray.rs  ui.rs
src/app/ui/: active.rs  cache_keepalive.rs  dashboard.rs  data.rs  logs.rs  oauth.rs  quota.rs  scheduler.rs  token_amount.rs  tokens.rs  upstream_editor.rs  upstreams.rs
src/app/ui/active/: scroll.rs
src/app/ui/oauth/: state.rs
src/balance/: mod.rs  providers.rs
src/balance_alert/: mod.rs
src/cache_keepalive/: body.rs  key.rs  runtime.rs  session.rs  tests.rs
src/core/: models.rs
src/live/: rate.rs
src/oauth/: account.rs  device.rs  import.rs  mod.rs  token.rs
src/pricing/: mod.rs
src/proxy/: debug.rs  forward.rs  mod.rs  router.rs  server.rs  transform.rs  upstream_auth.rs
src/proxy/compat/: bridge.rs  chat_completions.rs  mod.rs
src/proxy/compat/anthropic/: mod.rs  request.rs  response.rs  stream.rs
src/proxy/compat/chat_completions/: reverse.rs  shared.rs  stream.rs  tests.rs  tools.rs
src/proxy/forward/: auth.rs  error_policy.rs  headers.rs  logging.rs  models.rs  response.rs  select.rs
src/quota/: codex.rs  mod.rs
src/scheduler/: mod.rs
src/storage/: credentials.rs  migrations.rs  mod.rs  query_balance_alerts.rs  query_cache_keepalive.rs  query_logs.rs  query_pricing.rs  query_scheduler.rs  query_settings.rs  query_snapshots.rs  query_upstreams.rs  secrets.rs  store.rs
src/usage/: mod.rs  parse.rs
